--- a/src/app/api/apisEmptyMode.html
+++ b/src/app/api/apisEmptyMode.html
@@ -15,14 +15,13 @@
     limitations under the License.
 
 -->
-<section style="height: 100%; width: 100%;">
-	<md-content style="height: 100%; width: 100%;">
-    <div class="landing-header">
-      <h3 style="color: #2B2B2B; font-size: 32px;">Gravitee.io Portal, do more with your APIs</h3>
-      <p style="color: #707070; font-size: 16px; margin: 0 0 20px;">Version 0.8.2-SNAPSHOT</p>
-    </div>
-		<div>
-			<div ng-include="'app/api/apisThumbMode.html'"></div>
-		</div>
-	</md-content>
-</section>
+<div style="text-align:center; color: #424E5A; fill: #424E5A; ">
+  <h1><ng-md-icon size="48" icon="error"></ng-md-icon> Hmmm, there is no API for you here :(</h1>
+  <div>
+    <h4 style="margin-top: 30px;" gravitee-roles-allowed="ADMIN, API_PUBLISHER">Let's start using Gravitee.io portal</h4>
+    <p style="margin-top: 30px;">
+      <md-button ng-if="authenticated" gravitee-roles-allowed="ADMIN, API_PUBLISHER" class="md-raised" ng-click="apisCtrl.createInitAPI()">Create your first API</md-button>
+      <md-button ng-if="!authenticated" class="md-raised" ng-click="apisCtrl.login()">Login</md-button>
+    </p>
+  </div>
+</div>
