--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -18,8 +18,8 @@
 <section style="height: 100%; width: 100%;">
 	<md-content style="height: 100%; width: 100%;">
     <div class="landing-header">
-      <h3 style="color: #2B2B2B; font-size: 32px;">Gravitee.io Portal, do more with your APIs</h3>
-      <p style="color: #707070; font-size: 16px; margin: 0 0 20px;">Version 0.8.2-SNAPSHOT</p>
+      <h3>Gravitee.io Portal</h3>
+      <p>Version {{apisCtrl.graviteeUIVersion}}</p>
     </div>
 		<div>
 			<div ng-include="'app/api/apisThumbMode.html'"></div>
