--- a/src/app/api/apisThumbMode.html
+++ b/src/app/api/apisThumbMode.html
@@ -16,12 +16,11 @@
 
 -->
 <div ng-init="apisCtrl.list()">
-  <md-card ng-if="!isLoading && (apisCtrl.apis.length > 0 || (apisCtrl.apis.length == 0 && !apisCtrl.isAPIsHome))">
+  <md-card class="no-box-shadow"nng-if="!isLoading && (apisCtrl.apis.length > 0 || (apisCtrl.apis.length == 0 && !apisCtrl.isAPIsHome))">
     <md-card-header>
       <md-card-header-text layout="row" layout-align="center">
-        <div class="input-group input-group-lg" flex="60" flex-xs="100">
-          <input class="form-control" type="text" ng-model="searchAPIs" placeholder="Search APIs ..." style="border-radius: 1px;" />
-          <span class="input-group-addon" style="border-radius: 1px; padding-bottom:0px;"><ng-md-icon icon="search" style="top: 0px;"></ng-md-icon></span>
+        <div class="input-group apis-header-filter" flex="60" flex-xs="100">
+          <input class="form-control" type="text" ng-model="searchAPIs" placeholder="Search APIs ..." autofocus/>
         </div>
       </md-card-header-text>
     </md-card-header>
@@ -55,8 +54,8 @@
       				</md-card-content>
               <md-card-footer>
                 <div class="api-box-footer" layout="row" layout-align="end">
-                  <span><span style="top: 2px; position: relative;">{{api.applicationsSize}}</span><ng-md-icon icon="assignment_turned_in" size="20" style="fill: #cdcdcd;"></ng-md-icon></span>
-                  <ng-md-icon icon="{{apisCtrl.getVisibilityIcon(api)}}" size="20" style="fill: #cdcdcd;"></ng-md-icon>
+                  <span><span style="top: 2px; position: relative;">{{api.applicationsSize}}</span><ng-md-icon icon="assignment_turned_in" size="20" style="fill: #cdcdcd;"><md-tooltip>Applications</md-tooltip></ng-md-icon></span>
+                  <ng-md-icon icon="{{apisCtrl.getVisibilityIcon(api)}}" size="20" style="fill: #cdcdcd;"><md-tooltip>{{apisCtrl.getVisibility(api)}}</md-tooltip></ng-md-icon>
                 </div>
               </md-card-footer>
       			</md-card>
