--- a/src/app/application/applicationsList.html
+++ b/src/app/application/applicationsList.html
@@ -15,17 +15,19 @@
     limitations under the License.
 
 -->
-<div ng-if="applicationsCtrl.applications.length > 0 && percentWidth < 50" layout="row" layout-align="end center" layout-padding>
-  <span class="btn-group">
-    <button ng-class="{'active': !applicationsCtrl.tableMode}" class="btn btn-default"
-            ng-click="applicationsCtrl.changeMode(false)" type="button">
-      <ng-md-icon icon="apps"></ng-md-icon>
-    </button>
-    <button ng-class="{'active': applicationsCtrl.tableMode}" class="btn btn-default"
-            ng-click="applicationsCtrl.changeMode(true)" type="button">
-      <ng-md-icon icon="list"></ng-md-icon>
-    </button>
-  </span>
+<div layout="row">
+ <div class="apis-view-mode" ng-if="applicationsCtrl.applications.length > 0 && percentWidth < 50">
+   <span class="btn-group">
+     <button ng-class="{'active': !applicationsCtrl.tableMode}" class="btn btn-default"
+             ng-click="applicationsCtrl.changeMode(false)" type="button">
+       <ng-md-icon icon="apps"></ng-md-icon>
+     </button>
+     <button ng-class="{'active': applicationsCtrl.tableMode}" class="btn btn-default"
+             ng-click="applicationsCtrl.changeMode(true)" type="button">
+       <ng-md-icon icon="list"></ng-md-icon>
+     </button>
+   </span>
+ </div>
 </div>
 <div ui-view></div>
 
