--- a/src/app/application/applicationsTableMode.html
+++ b/src/app/application/applicationsTableMode.html
@@ -15,8 +15,15 @@
     limitations under the License.
 
 -->
-<md-card>
-	<md-card-content>
+<md-card class="no-box-shadow">
+  <md-card-header>
+    <md-card-header-text layout="row" layout-align="center">
+      <div class="input-group apis-header-filter" flex="60" flex-xs="100">
+        <input class="form-control" type="text" ng-model="searchApplications" placeholder="Search applications ..." autofocus/>
+      </div>
+    </md-card-header-text>
+  </md-card-header>
+	<md-card-content style="overflow-y: auto; height: calc(100vh - 90px);">
 		<md-table-container ng-show="applicationsCtrl.applications.length > 0">
 			<table md-table>
 				<thead md-head md-order="order">
@@ -26,7 +33,7 @@
 				</tr>
 				</thead>
 				<tbody>
-          <tr md-row md-auto-select ng-repeat="application in applicationsCtrl.applications | orderBy: order"
+          <tr md-row md-auto-select ng-repeat="application in applicationsCtrl.applications | filter: searchApplications | orderBy: order"
               title="{{application.description}}" ui-sref="applications.portal.general({applicationId: application.id})">
             <td md-cell>{{application.name}}</td>
             <td md-cell>{{application.type}}</td>
