--- a/src/app/components/sidenav/sidenav.html
+++ b/src/app/components/sidenav/sidenav.html
@@ -46,7 +46,7 @@
       </md-list-item>
     </md-list>
     <md-list class="sidenav-footer">
-      <md-list-item>
+      <md-list-item style="cursor: auto;">
         <md-button class="md-fab md-mini sidenav-toggle" md-no-ink md-no-focus-style ng-click="reducedMode = !reducedMode" aria-label="Mini FAB">
            <ng-md-icon class="sidenav-toggle-icon" size="16" icon="{{reducedMode?'chevron_right':'chevron_left'}}"></ng-md-icon>
         </md-button>
