--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -79,7 +79,19 @@
           <textarea ng-model="generalCtrl.api.description" required></textarea>
         </md-input-container>
       </div>
-
+       
+      <div layout="column" class="api-picture">
+        <label>Picture</label>
+        <div>
+          <img width="20%" ngf-no-object-url="true" ngf-src="generalCtrl.api.picture || apiPicture || 'app/images/GRAVITEE_LOGOsstxtclair-05.png'">
+        </div>
+        <div class="button" ngf-select="generalCtrl.selectAPIPicture($file)" ng-model="apiPicture" name="apiLogo" ngf-pattern="'image/*'"
+              ngf-accept="'image/*'" ngf-max-size="20MB">
+          <md-button class="md-raised">Select File</md-button>
+          <p>Formats: jpeg, png, gif</p>
+        </div>
+      </div>
+            
       <div layout="" layout-sm="column">
         <md-input-container class="flex">
           <label>Deployment tags</label>
