--- a/src/app/api/apisThumbMode.html
+++ b/src/app/api/apisThumbMode.html
@@ -40,8 +40,7 @@
               </md-card-header>
       				<md-card-content layout="column">
                 <div class="api-box-description">
-                  <div class="api-box-icon">
-                    <img src="app/images/GRAVITEE_LOGOsstxtclair-05.png"/>
+                  <div class="api-box-icon" ng-style="api.picture && {'background-image': 'url('+ api.picture +')'}">
                   </div>
                   <div class="api-box-name-version" layout-padding>
                     {{api.name}} <small>({{api.version}})</small>
