fix(apis-applications): fix API and application list initialization

--- a/src/app/api/apisTableMode.html
+++ b/src/app/api/apisTableMode.html
@@ -24,7 +24,7 @@
     </md-card-header-text>
   </md-card-header>
 	<md-card-content style="overflow-y: auto; height: calc(100vh - {{apisCtrl.apisScrollAreaHeight}}px);">
-		<md-table-container ng-init="apisCtrl.list()">
+		<md-table-container>
 			<table md-table>
 				<thead md-head md-order="order">
           <tr md-row>
