--- a/src/app/components/sidenav/_sidenav.scss
+++ b/src/app/components/sidenav/_sidenav.scss
@@ -123,11 +123,11 @@ md-sidenav.md-sidenav-theme {
     height: 18px !important;
     min-height: 18px !important;
     line-height: 18px !important;
-    background-color: #979797;
+    background-color: #006CAB;
   }
   
   .md-button.sidenav-toggle:hover, .md-button.sidenav-toggle:focus {
-    background-color: #979797;
+    background-color: #006CAB;
   }
   
   ng-md-icon.sidenav-toggle-icon {
