--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -18,8 +18,7 @@
 <section style="height: 100%; width: 100%;">
 	<md-content style="height: 100%; width: 100%;">
     <div class="landing-header">
-      <h3>Gravitee.io Portal</h3>
-      <p>Version {{apisCtrl.graviteeUIVersion}}</p>
+      <h3>Gravitee.io Portal <small>version {{apisCtrl.graviteeUIVersion}}</small></h3>
     </div>
 		<div>
 			<div ng-include="'app/api/apisThumbMode.html'"></div>
