--- a/src/app/components/sidenav/sidenav.html
+++ b/src/app/components/sidenav/sidenav.html
@@ -29,7 +29,7 @@
 		</div>
 		<md-list class="sidenav-list">
       <md-list-item ng-repeat="menuItem in menuItems" ng-if="authenticated || menuItem.url === '/'">
-        <a ui-sref="{{menuItem.name}}" ui-sref-active="sidenav-active" title="{{menuItem.menu.label}}">
+        <a ui-sref="{{menuItem.name}}" ui-sref-opts="{reload: true}" ui-sref-active="sidenav-active" title="{{menuItem.menu.label}}">
           <ng-md-icon icon="{{menuItem.menu.icon}}"></ng-md-icon>
           <span ng-if="!reducedMode">{{menuItem.menu.label}}</span>
         </a>
