--- a/src/app/components/documentation/page.html
+++ b/src/app/components/documentation/page.html
@@ -19,15 +19,14 @@
   <div ng-if="pageCtrl.markdownType()" btf-markdown="page.content">
   </div>
 
-  <raml-console ng-if="pageCtrl.ramlType() && page.content && enableTryIt" src="{{pageCtrl.getContentUrl()}}" resources-collapsed
+  <raml-console ng-if="pageCtrl.ramlType() && page.content && enableTryIt" src="{{pageCtrl.url}}" resources-collapsed
                 disable-title disable-theme-switcher disable-raml-client-generator>
   </raml-console>
 
-  <raml-console ng-if="pageCtrl.ramlType() && page.content && !enableTryIt" src="{{pageCtrl.getContentUrl()}}" resources-collapsed
+  <raml-console ng-if="pageCtrl.ramlType() && page.content && !enableTryIt" src="{{pageCtrl.url}}" resources-collapsed
                 disable-try-it
                 disable-title disable-theme-switcher disable-raml-client-generator>
   </raml-console>
 
-  <div ng-if="pageCtrl.swaggerType() && page.content" swagger-ui url="pageCtrl.getContentUrl()" api-explorer="enableTryIt" validator-url="false">
-  </div>
+  <div ng-if="pageCtrl.swaggerType() && page.content" swagger-ui url="pageCtrl.url" api-explorer="false" trusted-sources="true" permalinks="true" validator-url="false"></div>
 </div>
