refactor: change notification's color

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -147,10 +147,10 @@ table[md-data-table] {
 
 md-toast {
   &.md-toast-success-theme .md-toast-content {
-    background-color: green;
+    background-color: #4ea44d;
   }
   &.md-toast-error-theme .md-toast-content {
-    background-color: red;
+    background-color: #bd362f;
   }
 }
 
