--- a/src/app/main/_main.scss
+++ b/src/app/main/_main.scss
@@ -1,15 +1,15 @@
 .landing-header {
 	padding: 8px 16px 0px 16px;
-	
+
   h3 {
     color: #006CAB;
 	  font-size: 32px;
-	  
+
 	  small {
 	    font-size: 40%;
 	  }
 	}
-	  
+
   p {
     color: #707070;
     font-size: 16px;
@@ -22,13 +22,13 @@
   	text-decoration: none;
     color: black;
   }
-  
+
   .api-box {
     md-card-header {
       padding: 0px 0px 20px 0px;
     }
     md-card-avatar {
-      width: 35px; 
+      width: 35px;
       height: 20px;
     }
     md-card-content {
@@ -44,7 +44,7 @@
       max-height: 80px;
       min-height: 80px;
       height: 80px;
-      background-image: url('/app/images/GRAVITEE_LOGOsstxtclair-05.png');
+      background-image: url('../app/images/GRAVITEE_LOGOsstxtclair-05.png');
       background-size: auto 100%;
       background-position: center center;
       background-repeat: no-repeat;
@@ -56,7 +56,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      
+
       small {
         padding: 0px;
       }
