--- a/src/app/main/_main.scss
+++ b/src/app/main/_main.scss
@@ -41,13 +41,11 @@
       text-align: center;
     }
     .api-box-icon {
-      max-height: 80px;
-      min-height: 80px;
-      height: 80px;
-      background-image: url('../app/images/GRAVITEE_LOGOsstxtclair-05.png');
-      background-size: auto 100%;
-      background-position: center center;
-      background-repeat: no-repeat;
+      img {
+        max-height: 80px;
+        min-height: 80px;
+        height: 80px;
+      }
     }
     .api-box-name-version {
       font-size: 14px;
