refactor: only display home when user not connected + change typo

--- a/src/app/components/sidenav/sidenav.html
+++ b/src/app/components/sidenav/sidenav.html
@@ -28,7 +28,7 @@
 			<md-divider></md-divider>
 		</div>
 		<md-list class="sidenav-list">
-      <md-list-item ng-repeat="menuItem in menuItems" ng-if="authenticated || menuItem.url === '/'">
+      <md-list-item ng-repeat="menuItem in menuItems" ng-if="authenticated || menuItem.name === 'home'">
         <a ui-sref="{{menuItem.name}}" ui-sref-opts="{reload: true}" ui-sref-active="sidenav-active" title="{{menuItem.menu.label}}">
           <ng-md-icon icon="{{menuItem.menu.icon}}"></ng-md-icon>
           <span ng-if="!reducedMode">{{menuItem.menu.label}}</span>
