--- a/src/app/instances/details/environment/instanceEnvironment.html
+++ b/src/app/instances/details/environment/instanceEnvironment.html
@@ -17,7 +17,7 @@
 -->
 <div class="gravitee-instances-container">
   <div class="gravitee-instances-content">
-    <div class="gravitee-instances-table-title"><ng-md-icon icon="info"></ng-md-icon> Informations</div>
+    <div class="gravitee-instances-table-title"><ng-md-icon icon="info"></ng-md-icon> Information</div>
     <div layout="row">
       <div class="gravitee-instances-table-content"><ng-md-icon icon="computer"></ng-md-icon> Hostname</div>
       <div ng-bind="instanceEnvironmentCtrl.instance.hostname" class="gravitee-instances-table-content"></div>
