feat(instance): Add plugins informations in instance view

--- a/src/app/instances/details/instanceHeader.html
+++ b/src/app/instances/details/instanceHeader.html
@@ -27,7 +27,7 @@
           <div class="gravitee-api-header-read-more" ng-bind="instanceCtrl.instance.version"></div>
         </md-content>
         <div ng-if="instance.tags && instance.tags.length > 0">Tags: {{instance.tags}}</div>
-        <div ng-if="!instance.tags || instance.tags.length === 0">No tags configured</div>
+        <div ng-if="!instance.tags || instance.tags.length === 0">No tag configured</div>
       </div>
     </div>
   </div>
