--- a/src/app/instances/details/environment/instanceEnvironment.html
+++ b/src/app/instances/details/environment/instanceEnvironment.html
@@ -17,56 +17,83 @@
 -->
 <div class="gravitee-instances-container">
   <div class="gravitee-instances-content">
-    <div class="gravitee-instances-table-title"><ng-md-icon icon="info"></ng-md-icon> Information</div>
-    <div layout="row">
-      <div class="gravitee-instances-table-content"><ng-md-icon icon="computer"></ng-md-icon> Hostname</div>
-      <div ng-bind="instanceEnvironmentCtrl.instance.hostname" class="gravitee-instances-table-content"></div>
-    </div>
-    <md-divider></md-divider>
-    <div layout="row">
-      <div class="gravitee-instances-table-content"><ng-md-icon icon="network_wifi"></ng-md-icon> IP</div>
-      <div ng-bind="instanceEnvironmentCtrl.instance.ip" class="gravitee-instances-table-content"></div>
-    </div>
-    <md-divider></md-divider>
-    <div layout="row">
-      <div class="gravitee-instances-table-content"><ng-md-icon icon="traffic"></ng-md-icon> State</div>
-      <div class="gravitee-instances-table-content"
-           ng-class="{'gravitee-instances-started':instanceEnvironmentCtrl.instance.state === 'started',
-           'gravitee-instances-stopped':instanceEnvironmentCtrl.instance.state === 'stopped'}">
-        {{instanceEnvironmentCtrl.instance.state}}
-      </div>
-    </div>
-    <md-divider></md-divider>
-    <div layout="row">
-      <div class="gravitee-instances-table-content"><ng-md-icon icon="flag"></ng-md-icon> Version</div>
-      <div ng-bind="instanceEnvironmentCtrl.instance.version" class="gravitee-instances-table-content"></div>
-    </div>
-    <md-divider></md-divider>
-    <div layout="row">
-      <div class="gravitee-instances-table-content"><ng-md-icon icon="label"></ng-md-icon> Tags</div>
-      <div class="gravitee-instances-table-content">
-        {{instanceEnvironmentCtrl.instance.tags.length === 0?'No tags configured':instanceEnvironmentCtrl.instance.tags}}
-      </div>
-    </div>
-    <md-divider></md-divider>
-  <div layout="row">
-      <div class="gravitee-instances-table-content"><ng-md-icon icon="timer"></ng-md-icon> Started at</div>
-      <div ng-bind="instanceEnvironmentCtrl.instance.started_at | date:'medium'" class="gravitee-instances-table-content"></div>
-    </div>
-    <md-divider></md-divider>
-      <div layout="row">
-        <div class="gravitee-instances-table-content"><ng-md-icon icon="favorite"></ng-md-icon> Last heartbeat at</div>
-        <div ng-bind="instanceEnvironmentCtrl.instance.last_heartbeat_at | date:'medium'"
-             class="gravitee-instances-table-content"></div>
-      </div>
-    <md-divider></md-divider>
-    <div ng-if="instanceEnvironmentCtrl.instance.stopped_at">
-      <div layout="row">
-        <div class="gravitee-instances-table-content"><ng-md-icon icon="power_settings_new"></ng-md-icon> Stopped at</div>
-        <div ng-bind="instanceEnvironmentCtrl.instance.stopped_at | date:'medium'"
-             class="gravitee-instances-table-content"></div>
-      </div>
-    </div>
+    <div class="gravitee-instances-table-title"><ng-md-icon icon="info_outline"></ng-md-icon> Informations</div>
+    <md-table-container>
+      <table md-table>
+        <tbody md-body>
+        <tr md-row>
+          <td md-cell><ng-md-icon icon="computer"></ng-md-icon></td>
+          <td md-cell>Hostname</td>
+          <td md-cell>{{instanceEnvironmentCtrl.instance.hostname}}</td>
+        </tr>
+        <tr md-row>
+          <td md-cell><ng-md-icon icon="network_wifi"></ng-md-icon></td>
+          <td md-cell>IP</td>
+          <td md-cell>{{instanceEnvironmentCtrl.instance.ip}}</td>
+        </tr>
+        <tr md-row>
+          <td md-cell><ng-md-icon icon="traffic"></ng-md-icon></td>
+          <td md-cell>State</td>
+          <td md-cell ng-class="{'gravitee-instances-started':instanceEnvironmentCtrl.instance.state === 'started',
+           'gravitee-instances-stopped':instanceEnvironmentCtrl.instance.state === 'stopped'}">{{instanceEnvironmentCtrl.instance.state}}</td>
+        </tr>
+        <tr md-row>
+          <td md-cell><ng-md-icon icon="flag"></ng-md-icon></td>
+          <td md-cell>Version</td>
+          <td md-cell>{{instanceEnvironmentCtrl.instance.version}}</td>
+        </tr>
+        <tr md-row>
+          <td md-cell><ng-md-icon icon="label"></ng-md-icon></td>
+          <td md-cell>Tags</td>
+          <td md-cell>{{instanceEnvironmentCtrl.instance.tags.length === 0? '-':instanceEnvironmentCtrl.instance.tags}}</td>
+        </tr>
+        <tr md-row>
+          <td md-cell><ng-md-icon icon="timer"></ng-md-icon></td>
+          <td md-cell>Started at</td>
+          <td md-cell>{{instanceEnvironmentCtrl.instance.started_at | date:'medium'}}</td>
+        </tr>
+        <tr md-row>
+          <td md-cell><ng-md-icon icon="favorite"></ng-md-icon></td>
+          <td md-cell>Last heartbeat at</td>
+          <td md-cell>{{instanceEnvironmentCtrl.instance.last_heartbeat_at | date:'medium'}}</td>
+        </tr>
+        <tr md-row ng-if="instanceEnvironmentCtrl.instance.stopped_at">
+          <td md-cell><ng-md-icon icon="power_settings_new"></ng-md-icon></td>
+          <td md-cell>Stopped at</td>
+          <td md-cell>{{instanceEnvironmentCtrl.instance.stopped_at | date:'medium'}}</td>
+        </tr>
+        </tbody>
+      </table>
+    </md-table-container>
+  </div>
+
+  <div class="gravitee-instances-content">
+    <div class="gravitee-instances-table-title"><ng-md-icon icon="extension"></ng-md-icon> Plugins</div>
+    <md-table-container>
+      <table md-table>
+        <thead md-head md-order="order">
+        <tr md-row>
+          <th md-column></th>
+          <th md-column md-desc md-order-by="id">ID</th>
+          <th md-column md-order-by="name">Name</th>
+          <th md-column md-order-by="version">Version</th>
+        </tr>
+        </thead>
+        <tbody md-body>
+        <tr md-row ng-repeat="plugin in instanceEnvironmentCtrl.instance.plugins | orderBy: order" title="{{plugin.name}}">
+          <td md-cell ng-switch on="plugin.type">
+            <ng-md-icon ng-switch-when="policy" icon="shuffle"></ng-md-icon>
+            <ng-md-icon ng-switch-when="service" icon="layers"></ng-md-icon>
+            <ng-md-icon ng-switch-when="repository" icon="folder_open"></ng-md-icon>
+            <ng-md-icon ng-switch-when="reporter" icon="dashboard"></ng-md-icon>
+          </td>
+          <td md-cell>{{plugin.id}}</td>
+          <td md-cell>{{plugin.name}}</td>
+          <td md-cell>{{plugin.version}}</td>
+        </tr>
+        </tbody>
+      </table>
+    </md-table-container>
   </div>
 
   <div class="gravitee-instances-content">
@@ -81,12 +108,21 @@
         <ng-md-icon icon="search"></ng-md-icon>
       </div>
     </div>
-    <div ng-repeat="(systemPropertyKey, systemPropertyValue) in instanceEnvironmentCtrl.instance.systemProperties">
-      <div layout="row">
-        <div ng-bind="systemPropertyKey" class="gravitee-instances-table-content"></div>
-        <div ng-bind="systemPropertyValue" class="gravitee-instances-table-content"></div>
-      </div>
-      <md-divider></md-divider>
-    </div>
+    <md-table-container>
+      <table md-table>
+        <thead md-head>
+        <tr md-row>
+          <th md-column>Name</th>
+          <th md-column>Value</th>
+        </tr>
+        </thead>
+        <tbody md-body>
+        <tr md-row ng-repeat="(systemPropertyKey, systemPropertyValue) in instanceEnvironmentCtrl.instance.systemProperties">
+          <td md-cell>{{systemPropertyKey}}</td>
+          <td md-cell>{{systemPropertyValue}}</td>
+        </tr>
+        </tbody>
+      </table>
+    </md-table-container>
   </div>
 </div>
